Created a bunch of features, ready for first version export

--- a/sites/all/themes/omega_image/css/omega-image-alpha-default-narrow.css
+++ b/sites/all/themes/omega_image/css/omega-image-alpha-default-narrow.css
@@ -26,28 +26,28 @@
   outline: none;
 }
 
-/* line 10, ../sass/_base.scss */
+/* line 9, ../sass/_base.scss */
 button {
   -webkit-border-radius: 1px;
   -moz-border-radius: 1px;
   -ms-border-radius: 1px;
   -o-border-radius: 1px;
   border-radius: 1px;
-  font-size: 9px;
+  font-size: 10px;
   line-height: 1.2em;
   padding: 0.3em 1em;
   border-width: 1px;
-  background-color: #2459ff;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #d1dbfa), color-stop(10%, #7f9af1), color-stop(50%, #2c59e7), color-stop(50%, #1e4ee6), color-stop(100%, #4c72eb));
-  background-image: -webkit-linear-gradient(#d1dbfa, #7f9af1 10%, #2c59e7 50%, #1e4ee6 50%, #4c72eb);
-  background-image: -moz-linear-gradient(#d1dbfa, #7f9af1 10%, #2c59e7 50%, #1e4ee6 50%, #4c72eb);
-  background-image: -o-linear-gradient(#d1dbfa, #7f9af1 10%, #2c59e7 50%, #1e4ee6 50%, #4c72eb);
-  background-image: linear-gradient(#d1dbfa, #7f9af1 10%, #2c59e7 50%, #1e4ee6 50%, #4c72eb);
-  border-color: #163fc1;
-  text-shadow: #0027a3 0px 1px 1px;
-  -webkit-box-shadow: rgba(255, 255, 255, 0.57059) 0 0 0.1em 1px inset;
-  -moz-box-shadow: rgba(255, 255, 255, 0.57059) 0 0 0.1em 1px inset;
-  box-shadow: rgba(255, 255, 255, 0.57059) 0 0 0.1em 1px inset;
+  background-color: #444444;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #989898), color-stop(10%, #6a6a6a), color-stop(50%, #3c3c3c), color-stop(50%, #353535), color-stop(100%, #4e4e4e));
+  background-image: -webkit-linear-gradient(#989898, #6a6a6a 10%, #3c3c3c 50%, #353535 50%, #4e4e4e);
+  background-image: -moz-linear-gradient(#989898, #6a6a6a 10%, #3c3c3c 50%, #353535 50%, #4e4e4e);
+  background-image: -o-linear-gradient(#989898, #6a6a6a 10%, #3c3c3c 50%, #353535 50%, #4e4e4e);
+  background-image: linear-gradient(#989898, #6a6a6a 10%, #3c3c3c 50%, #353535 50%, #4e4e4e);
+  border-color: #1e1e1e;
+  text-shadow: #040404 0px 1px 1px;
+  -webkit-box-shadow: rgba(255, 255, 255, 0.26667) 0 0 0.1em 1px inset;
+  -moz-box-shadow: rgba(255, 255, 255, 0.26667) 0 0 0.1em 1px inset;
+  box-shadow: rgba(255, 255, 255, 0.26667) 0 0 0.1em 1px inset;
   -webkit-background-clip: padding;
   -moz-background-clip: padding;
   background-clip: padding-box;
@@ -58,14 +58,14 @@ button, button:visited {
 }
 /* line 31, ../../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/fancy-buttons-1.2.0/lib/stylesheets/_fancy-buttons.sass */
 button:hover, button:focus {
-  background-color: #154dff;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #c4d0f8), color-stop(10%, #718fef), color-stop(50%, #1e4ee6), color-stop(50%, #1948dc), color-stop(100%, #3f68ea));
-  background-image: -webkit-linear-gradient(#c4d0f8, #718fef 10%, #1e4ee6 50%, #1948dc 50%, #3f68ea);
-  background-image: -moz-linear-gradient(#c4d0f8, #718fef 10%, #1e4ee6 50%, #1948dc 50%, #3f68ea);
-  background-image: -o-linear-gradient(#c4d0f8, #718fef 10%, #1e4ee6 50%, #1948dc 50%, #3f68ea);
-  background-image: linear-gradient(#c4d0f8, #718fef 10%, #1e4ee6 50%, #1948dc 50%, #3f68ea);
-  border-color: #143ab3;
-  text-shadow: #002494 0px 1px 1px;
+  background-color: #3c3c3c;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #919191), color-stop(10%, #636363), color-stop(50%, #353535), color-stop(50%, #2d2d2d), color-stop(100%, #474747));
+  background-image: -webkit-linear-gradient(#919191, #636363 10%, #353535 50%, #2d2d2d 50%, #474747);
+  background-image: -moz-linear-gradient(#919191, #636363 10%, #353535 50%, #2d2d2d 50%, #474747);
+  background-image: -o-linear-gradient(#919191, #636363 10%, #353535 50%, #2d2d2d 50%, #474747);
+  background-image: linear-gradient(#919191, #636363 10%, #353535 50%, #2d2d2d 50%, #474747);
+  border-color: #161616;
+  text-shadow: black 0px 1px 1px;
 }
 /* line 116, ../../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/fancy-buttons-1.2.0/lib/stylesheets/_fancy-buttons.sass */
 button:hover, button:hover:visited, button:focus, button:focus:visited {
@@ -73,17 +73,17 @@ button:hover, button:hover:visited, button:focus, button:focus:visited {
 }
 /* line 36, ../../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/fancy-buttons-1.2.0/lib/stylesheets/_fancy-buttons.sass */
 button:active {
-  background-color: #0541ff;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #1e4ee6), color-stop(30%, #2856e7), color-stop(50%, #1949e1), color-stop(50%, #1845d3), color-stop(100%, #436bea));
-  background-image: -webkit-linear-gradient(#1e4ee6, #2856e7 30%, #1949e1 50%, #1845d3 50%, #436bea);
-  background-image: -moz-linear-gradient(#1e4ee6, #2856e7 30%, #1949e1 50%, #1845d3 50%, #436bea);
-  background-image: -o-linear-gradient(#1e4ee6, #2856e7 30%, #1949e1 50%, #1845d3 50%, #436bea);
-  background-image: linear-gradient(#1e4ee6, #2856e7 30%, #1949e1 50%, #1845d3 50%, #436bea);
-  border-color: #1236a5;
-  text-shadow: #002085 0px -1px -1px;
-  -webkit-box-shadow: #163fc1 0 0.08em 0.2em 1px inset;
-  -moz-box-shadow: #163fc1 0 0.08em 0.2em 1px inset;
-  box-shadow: #163fc1 0 0.08em 0.2em 1px inset;
+  background-color: #353535;
+  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #353535), color-stop(30%, #3a3a3a), color-stop(50%, #303030), color-stop(50%, #282828), color-stop(100%, #494949));
+  background-image: -webkit-linear-gradient(#353535, #3a3a3a 30%, #303030 50%, #282828 50%, #494949);
+  background-image: -moz-linear-gradient(#353535, #3a3a3a 30%, #303030 50%, #282828 50%, #494949);
+  background-image: -o-linear-gradient(#353535, #3a3a3a 30%, #303030 50%, #282828 50%, #494949);
+  background-image: linear-gradient(#353535, #3a3a3a 30%, #303030 50%, #282828 50%, #494949);
+  border-color: #0e0e0e;
+  text-shadow: black 0px -1px -1px;
+  -webkit-box-shadow: #1e1e1e 0 0.08em 0.2em 1px inset;
+  -moz-box-shadow: #1e1e1e 0 0.08em 0.2em 1px inset;
+  box-shadow: #1e1e1e 0 0.08em 0.2em 1px inset;
 }
 /* line 116, ../../../../../../../../../../../../Library/Ruby/Gems/1.8/gems/fancy-buttons-1.2.0/lib/stylesheets/_fancy-buttons.sass */
 button:active, button:active:visited {
