--- a/sites/all/themes/omega_image/css/global.css
+++ b/sites/all/themes/omega_image/css/global.css
@@ -463,15 +463,16 @@ h2.block-title {
 #block-views-featured-product-block {
   font-family: "Roboto", sans-serif;
   padding: 6em 0 8em 0;
+  min-height: 300px;
 }
-/* line 255, ../sass/global.scss */
+/* line 256, ../sass/global.scss */
 #block-views-featured-product-block .views-field-title {
   display: block;
   font-weight: 100;
   font-size: 3.4em;
   color: #fff;
 }
-/* line 261, ../sass/global.scss */
+/* line 262, ../sass/global.scss */
 #block-views-featured-product-block .views-field-body p {
   font-weight: 100;
   font-size: 1.4em;
@@ -479,22 +480,22 @@ h2.block-title {
   color: #fff;
   padding: 1em 0 0 0;
 }
-/* line 268, ../sass/global.scss */
+/* line 269, ../sass/global.scss */
 #block-views-featured-product-block .views-field-field-illustration {
   position: relative;
 }
-/* line 269, ../sass/global.scss */
+/* line 270, ../sass/global.scss */
 #block-views-featured-product-block .views-field-field-illustration img {
   position: absolute;
   right: 0;
 }
 
-/* line 275, ../sass/global.scss */
+/* line 276, ../sass/global.scss */
 #block-views-country-block {
   font-family: "Roboto", sans-serif;
   color: #222;
 }
-/* line 278, ../sass/global.scss */
+/* line 279, ../sass/global.scss */
 #block-views-country-block .field-title {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1.2em;
@@ -502,13 +503,13 @@ h2.block-title {
   padding: 0.5em 0;
   font-weight: bold;
 }
-/* line 285, ../sass/global.scss */
+/* line 286, ../sass/global.scss */
 #block-views-country-block .views-field-title {
   font-size: 3em;
   font-weight: 300;
   color: #444;
 }
-/* line 290, ../sass/global.scss */
+/* line 291, ../sass/global.scss */
 #block-views-country-block .views-field-body {
   font-size: 1.4em;
   font-weight: 100;
@@ -516,18 +517,18 @@ h2.block-title {
   line-height: 140%;
 }
 
-/* line 297, ../sass/global.scss */
+/* line 298, ../sass/global.scss */
 #block-views-country-block-1 .views-row {
   padding: 1em;
   float: right;
   /* border: 1px solid #ccc; */
   margin-bottom: 10px;
 }
-/* line 301, ../sass/global.scss */
+/* line 302, ../sass/global.scss */
 #block-views-country-block-1 .views-row .views-field-name {
   padding-top: 10px;
 }
-/* line 303, ../sass/global.scss */
+/* line 304, ../sass/global.scss */
 #block-views-country-block-1 .views-row .views-field-name a {
   font-family: "Roboto Condensed", sans-serif;
   font-size: 1em;
@@ -535,23 +536,23 @@ h2.block-title {
   color: #222;
   text-decoration: none;
 }
-/* line 309, ../sass/global.scss */
+/* line 310, ../sass/global.scss */
 #block-views-country-block-1 .views-row .views-field-name a:hover {
   text-decoration: underline;
 }
-/* line 314, ../sass/global.scss */
+/* line 315, ../sass/global.scss */
 #block-views-country-block-1 .views-row .views-field-field-logo img {
   padding: 10px;
   border: 1px solid #cccccc;
 }
 
-/* line 321, ../sass/global.scss */
+/* line 322, ../sass/global.scss */
 #block-views-news-block {
   font-family: "Roboto", sans-serif;
   color: #fff;
   padding: 4em 0;
 }
-/* line 325, ../sass/global.scss */
+/* line 326, ../sass/global.scss */
 #block-views-news-block .views-field-field-gallery-image img {
   padding: 4px;
   background: #fff;
@@ -559,14 +560,14 @@ h2.block-title {
   -moz-box-shadow: 0px 0px 5px #222222;
   box-shadow: 0px 0px 5px #222222;
 }
-/* line 330, ../sass/global.scss */
+/* line 331, ../sass/global.scss */
 #block-views-news-block .views-field-title {
   font-weight: 300;
   font-size: 1.6em;
   padding-bottom: 1em;
   font-family: "Roboto Condensed", sans-serif;
 }
-/* line 336, ../sass/global.scss */
+/* line 337, ../sass/global.scss */
 #block-views-news-block .views-field-body p {
   font-weight: 100;
   font-size: 1.4em;
@@ -574,24 +575,24 @@ h2.block-title {
   line-height: 140%;
 }
 
-/* line 344, ../sass/global.scss */
+/* line 345, ../sass/global.scss */
 #block-views-news-block-1 {
   font-family: "Roboto", sans-serif;
   color: #222;
 }
-/* line 347, ../sass/global.scss */
+/* line 348, ../sass/global.scss */
 #block-views-news-block-1 .views-field-title {
   font-weight: 300;
   font-size: 1em;
   padding: 5px 0;
   font-family: "Roboto Condensed", sans-serif;
 }
-/* line 352, ../sass/global.scss */
+/* line 353, ../sass/global.scss */
 #block-views-news-block-1 .views-field-title a {
   color: #222;
   text-decoration: none;
 }
-/* line 357, ../sass/global.scss */
+/* line 358, ../sass/global.scss */
 #block-views-news-block-1 .views-field-field-gallery-image img {
   padding: 4px;
   background: #fff;
@@ -600,19 +601,19 @@ h2.block-title {
   box-shadow: 0px 0px 5px #222222;
 }
 
-/* line 363, ../sass/global.scss */
+/* line 364, ../sass/global.scss */
 #block-views-suppliers-block .views-row {
   clear: both;
   padding: 0 0 2em 0;
   border-bottom: 1px solid #cccccc;
   margin-bottom: 1em;
 }
-/* line 369, ../sass/global.scss */
+/* line 370, ../sass/global.scss */
 #block-views-suppliers-block .views-field-field-logo img {
   border: 1px solid #dddddd;
   margin: 0 10px 10px 0;
 }
-/* line 373, ../sass/global.scss */
+/* line 374, ../sass/global.scss */
 #block-views-suppliers-block .views-field-field-country a {
   color: #fff;
   text-decoration: none;
@@ -624,16 +625,16 @@ h2.block-title {
   font-size: .7em;
   clear: both;
 }
-/* line 383, ../sass/global.scss */
+/* line 384, ../sass/global.scss */
 #block-views-suppliers-block .views-field-field-country a:hover {
   color: #ceff00;
   background: #000;
 }
-/* line 388, ../sass/global.scss */
+/* line 389, ../sass/global.scss */
 #block-views-suppliers-block .views-field-title {
   margin-bottom: 10px;
 }
-/* line 390, ../sass/global.scss */
+/* line 391, ../sass/global.scss */
 #block-views-suppliers-block .views-field-title a {
   color: #222;
   font-size: 1.1em;
@@ -642,11 +643,11 @@ h2.block-title {
   text-transform: uppercase;
   font-weight: 300;
 }
-/* line 397, ../sass/global.scss */
+/* line 398, ../sass/global.scss */
 #block-views-suppliers-block .views-field-title a:hover {
   text-decoration: underline;
 }
-/* line 402, ../sass/global.scss */
+/* line 403, ../sass/global.scss */
 #block-views-suppliers-block .views-field-body p {
   font-family: "Tahoma", "Lucida Grande", sans-serif;
   font-weight: 200;
@@ -655,7 +656,7 @@ h2.block-title {
   color: #444;
 }
 
-/* line 411, ../sass/global.scss */
+/* line 412, ../sass/global.scss */
 #block-views-suppliers-block-1 .views-field-description-i18n {
   font-family: "Tahoma", "Lucida Grande", sans-serif;
   font-weight: 200;
@@ -664,20 +665,20 @@ h2.block-title {
   color: #555;
   margin-top: 0;
 }
-/* line 415, ../sass/global.scss */
+/* line 416, ../sass/global.scss */
 #block-views-suppliers-block-1 .views-field-field-logo img {
   padding: 1em;
   border: 1px solid #cccccc;
   float: left;
   margin-right: 20px;
 }
-/* line 421, ../sass/global.scss */
+/* line 422, ../sass/global.scss */
 #block-views-suppliers-block-1 .views-label-field-country {
   float: left;
   padding-right: 20px;
 }
 
-/* line 427, ../sass/global.scss */
+/* line 428, ../sass/global.scss */
 #block-views-suppliers-block-2 h3 {
   font-family: "Roboto", sans-serif;
   font-weight: 100;
@@ -685,28 +686,28 @@ h2.block-title {
   padding-bottom: .2em;
   margin-bottom: 1em;
 }
-/* line 434, ../sass/global.scss */
+/* line 435, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row {
   height: 360px;
   background: #fff;
   border: 1px solid #cccccc;
   margin-bottom: 1em;
 }
-/* line 439, ../sass/global.scss */
+/* line 440, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-field-illustration {
   padding: 20px;
 }
-/* line 443, ../sass/global.scss */
+/* line 444, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-title,
 #block-views-suppliers-block-2 .views-row .views-field-body {
   margin-left: 10px;
   padding-right: 10px;
 }
-/* line 447, ../sass/global.scss */
+/* line 448, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-title {
   margin-bottom: 10px;
 }
-/* line 449, ../sass/global.scss */
+/* line 450, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-title a {
   color: #222;
   font-size: 1.1em;
@@ -715,11 +716,11 @@ h2.block-title {
   text-transform: uppercase;
   font-weight: 300;
 }
-/* line 456, ../sass/global.scss */
+/* line 457, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-title a:hover {
   text-decoration: underline;
 }
-/* line 462, ../sass/global.scss */
+/* line 463, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-body {
   font-family: "Tahoma", "Lucida Grande", sans-serif;
   font-weight: 200;
@@ -728,31 +729,31 @@ h2.block-title {
   color: #444;
   margin: 20px 0 0 10px;
 }
-/* line 470, ../sass/global.scss */
+/* line 471, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-field-grape-varieties {
   text-transform: uppercase;
   border-bottom: 1px solid #cccccc;
   padding: 6px 10px;
 }
-/* line 474, ../sass/global.scss */
+/* line 475, ../sass/global.scss */
 #block-views-suppliers-block-2 .views-row .views-field-field-grape-varieties a {
   color: #3a64e9;
   text-decoration: none;
 }
 
-/* line 481, ../sass/global.scss */
+/* line 482, ../sass/global.scss */
 #block-views-frontpage-news-block {
   margin: 9em 0 0 0;
 }
-/* line 482, ../sass/global.scss */
+/* line 483, ../sass/global.scss */
 #block-views-frontpage-news-block .views-row {
   padding: 1em 0;
 }
-/* line 485, ../sass/global.scss */
+/* line 486, ../sass/global.scss */
 #block-views-frontpage-news-block .views-field-title {
   margin: 5px 0;
 }
-/* line 486, ../sass/global.scss */
+/* line 487, ../sass/global.scss */
 #block-views-frontpage-news-block .views-field-title a {
   color: #222;
   font-size: 1.3em;
@@ -761,7 +762,7 @@ h2.block-title {
   text-transform: uppercase;
   font-weight: 300;
 }
-/* line 496, ../sass/global.scss */
+/* line 497, ../sass/global.scss */
 #block-views-frontpage-news-block .views-field-body p,
 #block-views-frontpage-news-block .views-field-body {
   font-family: "Tahoma", "Lucida Grande", sans-serif;
@@ -771,7 +772,7 @@ h2.block-title {
   color: #555;
   margin: 5px 0;
 }
-/* line 500, ../sass/global.scss */
+/* line 501, ../sass/global.scss */
 #block-views-frontpage-news-block .views-field-field-gallery-image {
   -webkit-box-shadow: 0px 0px 5px #222222;
   -moz-box-shadow: 0px 0px 5px #222222;
@@ -780,11 +781,11 @@ h2.block-title {
   margin-bottom: 2em;
 }
 
-/* line 508, ../sass/global.scss */
+/* line 509, ../sass/global.scss */
 #block-views-about-block {
   padding: 2em 0;
 }
-/* line 509, ../sass/global.scss */
+/* line 510, ../sass/global.scss */
 #block-views-about-block .views-field-body {
   font-family: "Roboto", sans-serif;
   font-weight: 100;
@@ -793,22 +794,22 @@ h2.block-title {
   color: #444;
 }
 
-/* line 517, ../sass/global.scss */
+/* line 518, ../sass/global.scss */
 #block-views-contact-block {
   float: right;
 }
-/* line 518, ../sass/global.scss */
+/* line 519, ../sass/global.scss */
 #block-views-contact-block .views-row {
   margin-bottom: 2em;
 }
-/* line 519, ../sass/global.scss */
+/* line 520, ../sass/global.scss */
 #block-views-contact-block .views-row .views-field-title {
   color: #3a64e9;
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   margin-bottom: .5em;
 }
-/* line 526, ../sass/global.scss */
+/* line 527, ../sass/global.scss */
 #block-views-contact-block .views-row .views-field-body p,
 #block-views-contact-block .views-row .views-field-body {
   font-family: "Tahoma", "Lucida Grande", sans-serif;
@@ -817,11 +818,11 @@ h2.block-title {
   line-height: 160%;
   color: #555;
 }
-/* line 529, ../sass/global.scss */
+/* line 530, ../sass/global.scss */
 #block-views-contact-block .views-row .views-field-field-google-map {
   padding: 1em 0;
 }
-/* line 531, ../sass/global.scss */
+/* line 532, ../sass/global.scss */
 #block-views-contact-block .views-row .views-field-field-google-map a {
   color: #fff;
   text-decoration: none;
@@ -832,20 +833,20 @@ h2.block-title {
   font-size: .7em;
   clear: both;
 }
-/* line 540, ../sass/global.scss */
+/* line 541, ../sass/global.scss */
 #block-views-contact-block .views-row .views-field-field-google-map a:hover {
   color: #ceff00;
   background: #000;
 }
 
-/* line 550, ../sass/global.scss */
+/* line 551, ../sass/global.scss */
 #block-search-form {
   position: absolute;
   right: 0;
   top: 0;
 }
 
-/* line 556, ../sass/global.scss */
+/* line 557, ../sass/global.scss */
 #block-views-illustrations-block {
   float: right;
   position: relative;
@@ -853,18 +854,18 @@ h2.block-title {
   z-index: 0;
 }
 
-/* line 564, ../sass/global.scss */
+/* line 565, ../sass/global.scss */
 ul.menu {
   padding: 2em 0;
   z-index: 200;
 }
 
-/* line 568, ../sass/global.scss */
+/* line 569, ../sass/global.scss */
 ul#superfish-1 {
   position: absolute;
   top: -35px;
 }
-/* line 571, ../sass/global.scss */
+/* line 572, ../sass/global.scss */
 ul#superfish-1 li {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #000000), color-stop(100%, #444444));
   background-image: -webkit-linear-gradient(#000000, #444444);
@@ -872,12 +873,12 @@ ul#superfish-1 li {
   background-image: -o-linear-gradient(#000000, #444444);
   background-image: linear-gradient(#000000, #444444);
 }
-/* line 573, ../sass/global.scss */
+/* line 574, ../sass/global.scss */
 ul#superfish-1 li a {
   color: #fff;
   border-color: #555;
 }
-/* line 576, ../sass/global.scss */
+/* line 577, ../sass/global.scss */
 ul#superfish-1 li a:hover {
   background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #444444), color-stop(100%, #888888));
   background-image: -webkit-linear-gradient(#444444, #888888);
@@ -886,17 +887,17 @@ ul#superfish-1 li a:hover {
   background-image: linear-gradient(#444444, #888888);
 }
 
-/* line 582, ../sass/global.scss */
+/* line 583, ../sass/global.scss */
 ul.superfish-2 .sf-vertical, ul.superfish-2 .sf-vertical li {
   width: 30em;
 }
 
-/* line 586, ../sass/global.scss */
+/* line 587, ../sass/global.scss */
 ul.language-switcher-locale-url li {
   display: inline;
   float: left;
 }
-/* line 589, ../sass/global.scss */
+/* line 590, ../sass/global.scss */
 ul.language-switcher-locale-url li a {
   text-decoration: none;
   font-weight: 700;
