--- a/sites/all/themes/omega_image/sass/global.scss
+++ b/sites/all/themes/omega_image/sass/global.scss
@@ -251,6 +251,7 @@ h2.block-title	{	font-size: 1.4em;
 									
 #block-views-featured-product-block	{	font-family: 'Roboto', sans-serif;
 										padding: 6em 0 8em 0;
+										min-height: 300px;
 										
 										.views-field-title	{	display: block;
 																font-weight: 100;
