--- a/sites/all/themes/omega_image/sass/global.scss
+++ b/sites/all/themes/omega_image/sass/global.scss
@@ -6,7 +6,13 @@ html, body	{	font-family: Tahoma, sans-serif;
 				font-size: 10pt;	
 				background: url('../media/lightpaperfibers.png');
 			}
-
+			
+#zone-header-wrapper	{	@include background-image(linear-gradient(#555, #222 20%, #333 70%, #111));
+							/* border-bottom: 8px solid #eee; */
+							position: relative;
+							margin-bottom: 4em;
+						}
+					
 #zone-user-wrapper	{	position: relative;
 						color: #222;
 						padding: 1em 0;
@@ -573,6 +579,9 @@ ul#superfish-1	{	position: absolute;
 						
 						a 	{	color: #fff;
 								border-color: #555;
+								padding: 12px 30px;
+								text-transform: uppercase;
+								font-size: .9em;
 								
 								&:hover	{	@include background-image(linear-gradient(#444, #888)); 
 										}
@@ -582,19 +591,39 @@ ul#superfish-1	{	position: absolute;
 													
 ul.superfish-2	{	.sf-vertical, .sf-vertical li 	{	width: 30em;
 													}
-				}					
-					
-ul.language-switcher-locale-url	{	li  {	display: inline;
+				}
+				
+#block-locale-language	{	position: absolute;
+							top: 0;
+							right: 0;
+							padding: 8px 20px;
+							
+							@include background-image(linear-gradient(#fff, #bbb 20%, #ccc 70%, #ddd));
+							
+							ul 	{	li  {	display: inline;
 											float: left;
 											
 											a   {	text-decoration: none;
-													font-weight: 700;
-													font-family: 'Roboto', sans-serif;
-													color: #444;
-													padding: 4em 10px 10px 10px;
+													color: #222;
+													padding: 0 20px;
 												}
 										}
-								}																		
-				
+								}
+						}									
+			
+																									
+ul#superfish-5		{	
+
+						li  {	a 	{ 	color: #eee;
+										padding: 8px 30px;
+										text-decoration: none;
+										border-left: 1px solid #888;
+									}
+								a:hover , 
+								a.active	{	@include background-image(linear-gradient(#fff, #bbb 20%, #ccc 70%, #ddd));
+												color: #222; 
+											}	
+							}
+					}			
 
 													
